--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,12 @@ Flask-Moment==0.6.0
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 guess-language-spirit==0.5.3
+gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
+psycopg2==2.7.4
 PyJWT==1.6.1
 python-dateutil==2.7.2
 python-editor==1.0.3
