--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,46 @@
-alembic==0.9.9
-Babel==2.5.3
+alembic==1.0.0
+Babel==2.6.0
 blinker==1.4
-click==6.7
-dominate==2.3.1
-Flask==0.12.2
+certifi==2018.8.24
+chardet==3.0.4
+Click==7.0
+colorclass==2.2.0
+docopt==0.6.2
+dominate==2.3.4
+Flask==1.0.2
 Flask-Babel==0.11.2
+Flask-BabelEx==0.9.3
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
-Flask-Migrate==2.1.1
+Flask-Migrate==2.2.1
 Flask-Moment==0.6.0
+Flask-Principal==0.4.0
+Flask-Security==3.0.0
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 guess-language-spirit==0.5.3
-gunicorn==19.7.1
+gunicorn==19.9.0
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
+packaging==18.0
+passlib==1.7.1
+pip-upgrader==1.4.6
 psycopg2==2.7.5
-PyJWT==1.6.1
-python-dateutil==2.7.2
+PyJWT==1.6.4
+pyparsing==2.2.2
+python-dateutil==2.7.3
 python-editor==1.0.3
-pytz==2018.3
+pytz==2018.5
+requests==2.19.1
 six==1.11.0
-SQLAlchemy==1.2.5
+speaklater==1.3
+SQLAlchemy==1.2.12
+terminaltables==3.1.0
+urllib3==1.23
 visitor==0.1.3
 Werkzeug==0.14.1
-WTForms==2.1
+WTForms==2.2.1
